adjust background size on header to try to fix view on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -66,7 +66,7 @@ ul {
 header {
     padding: 0.75rem 0.5rem;
     background-image: url('../img/bg-img.svg');
-    background-size: 65px;
+    background-size: 65px 131%;
     background-repeat: repeat;
     position: fixed;
     top: 0;
